# stream_zipper

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
include/stream_zip/: deflate_streambuf.hpp
src/: CMakeLists.txt  deflate_streambuf.cpp  deflate_streambuf.cxx  deflate_streambuf.hxx  stream_zipper.cxx  test.cpp
tests/: CMakeLists.txt  deflate_streambuf_test.cpp
